Removed vmargs comment helper